Moved overflow hidden into element to stop scroll bars flickering on and then off when page first loads. Removed transform from main css files to avoid scaling to 0 and back.

--- a/app/css/calc_portrait.css
+++ b/app/css/calc_portrait.css
@@ -40,7 +40,6 @@ body {
   box-pack: center;
   box-orient: vertical;
   display: flex;
-  transform: translate(-50%, -50%) scale(0, 0);
 }
 
 sup,
